--- a/ComparingTexts/ComparingTexts.csproj
+++ b/ComparingTexts/ComparingTexts.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IComparable.cs" />
     <Compile Include="TextComparer.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
