--- a/ComparingTexts/ComparingTexts.csproj
+++ b/ComparingTexts/ComparingTexts.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColoredText.cs" />
     <Compile Include="IComparable.cs" />
     <Compile Include="LongestCommonSubsequence.cs" />
     <Compile Include="TextComparer.cs" />
@@ -57,7 +58,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SelectionRange.cs" />
+    <Compile Include="ColoredRange.cs" />
     <Compile Include="Text.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
