--- a/ComparingTexts/ComparingTexts.csproj
+++ b/ComparingTexts/ComparingTexts.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ColoredText.cs" />
-    <Compile Include="IColoredText.cs" />
+    <Compile Include="IReadOnlyColoredText.cs" />
     <Compile Include="IComparable.cs" />
     <Compile Include="LongestCommonSubsequence.cs" />
     <Compile Include="TextComparer.cs" />
